1_deployment-configmap-v2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: webapp-d
  template:
    metadata:
      labels:
        app: webapp-d
    spec:
      containers:
      - name: nginx
        image: nginx
        lifecycle:
          postStart:
            exec:
              command: ["/bin/sh", "-c", "hostname > /usr/share/nginx/html/index.html"]
