1_deployment-configmap.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: webapp-d
  template:
    metadata:
      labels:
        app: webapp-d
    spec:
      containers:
      - name: httpd
        image: httpd
