1_simple-pod-configmap-env-v2.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-configmap-env
spec:
  containers:
    - name: nginx
      image: nginx
