1_simple-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: webapp1
  labels:
    app: simple-pod
spec:
  containers:
  - name: nginx
    image: nginx
    ports:
    - containerPort: 80
