1_simple-pod2.yaml
apiVersion: v1
kind: Pod
metadata:
  name: webapp2
  labels:
    app: simple-pod
spec:
  containers:
  - name: nginx
    image: nginx
    ports:
    - containerPort: 80
    lifecycle:
      postStart:
        exec:
          command: ["/bin/sh", "-c", "hostname -i > /usr/share/nginx/html/index.html"]
