2_fargate-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: webapp1
  labels:
    app: simple-pod
    run-on: fargate
spec:
  containers:
  - name: nginx
    image: nginx
    ports:
    - containerPort: 80
    lifecycle:
      postStart:
        exec:
          command: ["/bin/sh", "-c", "hostname > /usr/share/nginx/html/index.html"]
