4_pod-using-ecr.yaml
apiVersion: v1
kind: Pod
metadata:
  name: demo-repo
spec:
  containers:
  - name: demo-repo
    image: 848718099117.dkr.ecr.eu-central-1.amazonaws.com/demo-repo:latest
    ports:
    - containerPort: 80
