6_pod_ingress_allowed.yml
apiVersion: v1
kind: Pod
metadata:
  name: ingress-allowed
  labels:
    ingress: allowed
spec:
  containers:
  - name: nginx
    image: nginx
    ports:
    - containerPort: 80
