9_check-pod-credentials.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: role-d
spec:
  replicas: 2
  selector:
    matchLabels:
      app: role-d
  template:
    metadata:
      labels:
        app: role-d
    spec:
      containers:
      - name: nginx
        image: nginx
        lifecycle:
          postStart:
            exec:
              command: ["/bin/sh", "-c", "apt-get update -y && apt-get install awscli -y"]
