1_service-for-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: webapp-d-service
spec:
  selector:
   app: webapp-d
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
