1_simple-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service
spec:
  selector:
   app: simple-pod 
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
