8_StatefulSet_with_EBS.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  labels:
    app: nginx
spec:
  ports:
  - port: 80
    name: web
  clusterIP: None
  selector:
    app: nginx
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: stateful-ebs
spec:
  serviceName: "nginx"
  replicas: 2
  selector:
    matchLabels:
      app: stateful-ebs
  template:
    metadata:
      labels:
        app: stateful-ebs
    spec:
      containers:
      - name: nginx
        image: nginx
        lifecycle:
          postStart:
            exec:
              command: ["/bin/sh", "-c", "hostname > /usr/share/nginx/html/index.html"]
        resources:
          requests:
            cpu: "1"
        volumeMounts:
        - name: auto-ebs-claim
          mountPath: /usr/share/nginx/html
  volumeClaimTemplates:
  - metadata:
      name: auto-ebs-claim
    spec:
      accessModes:
        - ReadWriteOnce
      storageClassName: auto-ebs-sc
      resources:
        requests:
          storage: 1Gi
