6_elb_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-sample
  # Create this ingress in the following namespace
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            # Which service should ingress connect to (expose externally)
            service:
              # Service created previously
              name: webapp-d-service
              port:
                number: 80
